// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules should create valid app 1`] = `
SCRIPTS: Array [
  "/runtime-9729bb82c0a343375b97.js",
  "/702-d6470065f851a41fe905.js",
  "/main-717618ac49c24013b802.js",
]
CSS: Array [
  "/main-21ba36bf1c8257f9aa56.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         <div class="_KPLLp3"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "702-d6470065f851a41fe905.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "702-d6470065f851a41fe905.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.1
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v16.13.1
 * react-is.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
  "index.html": SCRIPTS: Array [
    "/runtime-9729bb82c0a343375b97.js",
    "/702-d6470065f851a41fe905.js",
    "/main-717618ac49c24013b802.js",
  ]
CSS: Array [
    "/main-21ba36bf1c8257f9aa56.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>,
  "main-21ba36bf1c8257f9aa56.css": .lE4bKpu {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.lE4bKpu ._KPLLp3 {
  font-size: 32px;
}
,
  "main-717618ac49c24013b802.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9729bb82c0a343375b97.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
